--- a/servlet/build.gradle
+++ b/servlet/build.gradle
@@ -1,7 +1,7 @@
 plugins {
 	id 'java'
 	id 'war' // JSP는 war 필요
-	id 'org.springframework.boot' version '3.1.1'
+	id 'org.springframework.boot' version '2.4.3'
 	id 'io.spring.dependency-management' version '1.1.0'
 }
 
@@ -9,7 +9,7 @@ group = 'hello'
 version = '0.0.1-SNAPSHOT'
 
 java {
-	sourceCompatibility = '17'
+	sourceCompatibility = '11'
 }
 
 configurations {
@@ -28,6 +28,17 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+	//JSP 추가 시작
+	implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.43'
+	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
+	//JSP 추가 끝
+
+
+	// 스프링부트 2.x버전
+	//	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	//	implementation 'javax.servlet:jstl'
+
 }
 
 tasks.named('test') {
