--- a/servlet/build.gradle
+++ b/servlet/build.gradle
@@ -29,15 +29,9 @@ dependencies {
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
-	//JSP 추가 시작
-	implementation group: 'org.apache.tomcat.embed', name: 'tomcat-embed-jasper', version: '9.0.43'
-	implementation group: 'org.glassfish.web', name: 'jakarta.servlet.jsp.jstl', version: '2.0.0'
-	//JSP 추가 끝
-
-
 	// 스프링부트 2.x버전
-	//	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
-	//	implementation 'javax.servlet:jstl'
+	implementation 'org.apache.tomcat.embed:tomcat-embed-jasper'
+	implementation 'javax.servlet:jstl'
 
 }
 
